--- a/hunter.html
+++ b/hunter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>This is BootStrap Example</title>
+  <title>This is Puzzle Game</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -17,11 +17,11 @@
 
 <div class="container-fluid">
   <h1>Find the mouse by Kavalapati Chandra Priya</h1>
-  <p>Click on the bushes to search for the mouse, beware the cat.</p>
-  <p id="bushes">Number of bushes checked is zero.</p>
-  <p id="penalty">Penalty is zero.</p>
-  <p >Click for help.</p>
-  <p id="help">Help report</p>
+  <div style="background-color:aquamarine;">Click on the bushes to search for the mouse, beware the cat.</div>
+  <div id="bushes">Number of bushes checked is zero.</div>
+  <div id="penalty" style="background-color:fuchsia;">Penalty is zero.</div>
+  <div>Click for help.</div>
+  <div id="help" style="background-color:springgreen;">Help report</div>
   
 </div>
 
