--- a/delayq.html
+++ b/delayq.html
@@ -28,7 +28,7 @@
 
 <body>
     <div >
-    <h1>Jitender Singh Guguloth builds a
+    <h1>Kavalapati Chandra Priya builds a
         delaying queue</h1>
         <div class="well">
         <form >
