--- a/delayq.html
+++ b/delayq.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> <head> <title></title><style>
+<html> <head> <title>Delay HTML</title><style>
     .flex-container {
       display: flex;  flex-direction:row;
       background-color: red;
