--- a/hunter.html
+++ b/hunter.html
@@ -120,7 +120,7 @@
     if(!gameOver){
     var imgval=document.getElementById(imageid);
      if (x==21){
-      document.getElementById(imageid).src="Lion.jpg";
+      document.getElementById(imageid).src="tiger.jpg";
       gameOver=true;
       penalty=penalty+4;
     }
