--- a/hunter.html
+++ b/hunter.html
@@ -161,6 +161,19 @@
           penalty += 2;
           document.getElementById("penalty").innerHTML = "Penalty is " + penalty;
       }
+
+      function reset(){
+            for(var j=0; j<ids.length; j++){
+              var idval=ids[j];
+            document.getElementById(idval).src = "bush.jpg"
+            }
+            checkCount = 0;
+            penalty = 0;
+            gameOver = false;
+            document.getElementById("penalty").innerHTML = "Penalty is zero";
+            document.getElementById("bushes").innerHTML = "Number of bushes checked is zero";
+            check(Math.floor(Math.random()*24)); 
+          }
   
   </script>
 
