--- a/hunter.html
+++ b/hunter.html
@@ -22,6 +22,7 @@
   <div id="penalty" style="background-color:fuchsia;">Penalty is zero.</div>
   <div  class="btn" onclick="help()">Click for help.</div>
   <div id="help" style="background-color:springgreen;">Help report</div>
+  <p class="btn btn-primary" onclick="reset()" >New Game</p>
   
 </div>
 
