--- a/delayq.html
+++ b/delayq.html
@@ -48,7 +48,7 @@
 		<button class="btn btn-primary" onclick="makeNewDiv()">Add value</button>
         <button class="btn btn-primary" onclick="get()">Get</button>
         <button class="btn btn-primary" onclick="delay()">Delay</button>
-	
+        <button class="btn btn-info" onclick="promote()">Promote</button>
 	
 </body>
 </div>
@@ -78,5 +78,15 @@
 		container.appendChild(removedId);
         }
 	}
+    function promote(){
+        var queueItems = document.getElementsByClassName("delayQ")
+        
+        var randomval = Math.floor(Math.random()*queueItems.length);
+        
+        var removedItem = queueItems[randomval];
+        queueItems[randomval].remove();
+        let container = document.getElementById('target');
+        container.insertBefore(removedItem, container.firstChild);
+    }
 </script>
 </html>	
